It's good if gpg-agent supports --format=ssh option for READKEY command.
It can be used for other authentication use cases.
Description
Description
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rGf7e0b0c8a56a common: Fix to determine ECC curve for SSH. | |||
| rGd7a3c455c5e2 agent: Support --format=ssh option for READKEY. | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Testing | • gniibe | T5862 authentication with USB token | ||
| Resolved | • gniibe | T6012 gpg-agent: Add --format=ssh option for READKEY |